# thruline

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.claude/: launch.json
.claude-plugin/: plugin.json
.github/workflows/: release.yml
commands/: context.md  init.md  pause.md  render.md  restore.md
crates/agentos-cli/src/: hooks.rs  main.rs  statusline.rs
crates/agentos-core/: Cargo.toml
crates/agentos-core/src/: lib.rs  store.rs  trust.rs
crates/agentos-mcp/src/: lib.rs
crates/thruline-cli/: Cargo.toml
crates/thruline-mcp/: Cargo.toml
docs/: 02-architecture.md  04-roadmap.md  05-launch-and-distribution.md  architecture.md  security.md
docs/setup/: antigravity.md  claude-code.md  codex.md  copilot.md  cursor.md  gemini-cli.md  vscode-panel.md  what-works-where.md
internal/: launch-strategy.md  roadmap.md  vision.md
site/: docs.html  index.html
