[workspace]
resolver = "2"
members = ["crates/agentos-core", "crates/agentos-cli", "crates/agentos-mcp"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Khubaib7-del/agentos"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
