[workspace]
resolver = "2"
members = ["crates/thruline-core", "crates/thruline-cli", "crates/thruline-mcp"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Khubaib7-del/thruline"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
