[package]
name = "thruline"
description = "Companion layer for AI coding agents: review queue, decision locks, snapshots, cross-agent memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["ai", "agents", "mcp", "claude", "memory"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "thruline"
path = "src/main.rs"

[dependencies]
thruline-core = { path = "../thruline-core", version = "0.1.0" }
thruline-mcp = { path = "../thruline-mcp", version = "0.1.0" }
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
