[package]
name = "thruline-mcp"
description = "MCP stdio server exposing thruline state as tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thruline-core = { path = "../thruline-core", version = "0.1.0" }
anyhow.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
